refactor: переработать методы класса с использованием Optional и Stream API